# tasks-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: pr-check.yml  push-check.yml  release.yml
e2e/: package-lock.json  package.json  tsconfig.json
e2e/src/: server.e2e.ts
npm/: package.json
skills/til/: SKILL.md
skills/tli/: SKILL.md
src/: app.rs  cli.rs  lib.rs  main.rs  model.rs  output.rs  root.rs  server.rs  service.rs  store.rs
src/server_assets/: app.css  app.js  htmx.js
src/store/: fs.rs  helpers.rs  mutations.rs  queries.rs  tests.rs
tests/: cli.rs
