[package]
name = "tli"
version = "0.1.0"
edition = "2024"
description = "Fast file-backed task tracker for humans, hooks, and AI agents."
license = "MIT"
repository = "https://github.com/slaveoftime/tasks-cli"
homepage = "https://github.com/slaveoftime/tasks-cli"
readme = "README.md"
keywords = ["tasks", "cli", "productivity", "automation", "agents"]
categories = ["command-line-utilities"]

[[bin]]
name = "tli"
path = "src/main.rs"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
cron = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.15"
